--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,9 +4,10 @@
 
 @font-face {
     font-family: "Cella";
-    src: url("/fonts/cella/Cella.woff2") format("woff2")
-            url("/fonts/cella/Cella.woff") format("woff"),
-        url("/fonts/cella/Cella.ttf") format("truetype");
+    src: url("./fonts/cella/Cella.woff2") format("woff2")
+            url("./fonts/cella/Cella.woff") format("woff"),
+        url("./fonts/cella/Cella.ttf") format("truetype"),
+        url("./fonts/cella/Cella.svg#Cella") format("svg");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
