--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,3 +12,11 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: "cellaregular";
+    src: url("/fonts/NewCella/cella-webfont.woff") format("woff2"),
+        url("/fonts/NewCella/cella-webfont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
